<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_baseline_question_answer_24"
            android:title="@string/document" />


        <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/contactss" />

        <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/abouts" />

        <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/log" />
    </group>


</menu>