<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.scholappdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.scholappdemo.ui.profile.GalleryFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.scholappdemo.ui.faq.SlideshowFragment"
        android:label="@string/document"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.scholappdemo.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.scholappdemo.ContactsFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.scholappdemo.LogoutFragment"
        android:label="@string/log"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.scholappdemo.SettingsFragment"
        android:label="@string/settings"
        />


</navigation>